# target-score-cpp

./: .gitignore  CMakeLists.txt  ImageAlignment.hpp  README.md  ShootingScore.cpp  ShootingScore.hpp  main.cpp  util.cpp  util.hpp
.github/workflows/: c-cpp.yml
src/: ImageAlignment.cpp  ImageAlignment.hpp  ShootingScore.cpp  ShootingScore.hpp  ShotTracking.cpp  ShotTracking.hpp  util.cpp  util.hpp
